feat: events & service section

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,8 +11,154 @@
   <body>
     <%- include('./layout/header'); -%>
 
-    <h1 class="index-title">我是首頁</h1>
-    <img src="../assets/images/event-1.png" style="width: 300px;" alt="cat">
+    <div class="container banner-bg position-relative mb-9 mb-lg-13">
+      <img src="../assets/images/banner-vote-lg.png" alt="vote-for-Supernova-Black" class="position-absolute banner-vote">
+      <img src="../assets/images/banner-cat.png" alt="Supernova-Black" class="position-absolute banner-cat">
+      <button type="button" class="btn btn-success px-5 py-3">候選人簡介<i class="ph ph-arrow-right ps-3"></i></button>
+    </div>
+
+    <div class="container mb-9 mb-lg-13">
+      <div class="row">
+        <div class="col-lg-3">
+          <h2 class="fs-8 text-primary fw-bold">候選主張</h2>
+          <h3 class="fs-5 text-primary mb-5 mb-lg-0">Candidate Claims</h3>
+        </div>
+        <div class="col-lg-9">
+          <p class="fs-lg-5 mb-lg-9">我黑新星堅信，藉由推動更完善的貓咪福利和相關政策，更是間接地投資於台灣的未來。畢竟，民眾的身心健康與工作熱情是推動經濟的核心動力。透過完善的貓咪福利政策，為台灣的 GDP 經濟帶來巨大效益。</p>
+          <p class="fs-lg-5 mb-0">因此，我期望能在立法院內推進這些政策，確保每一隻貓咪都能得到他們應有的照顧，同時也為台灣的經濟發展助一臂之力。讓我們一同護航台灣的幸福經濟，從照顧每一隻貓咪開始。</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mb-9 mb-lg-13">
+      <div class="row">
+        <div class="col-lg-3">
+          <h2 class="fs-8 text-primary fw-bold">最新活動</h2>
+          <h3 class="fs-5 text-primary mb-5 mb-lg-0">Latest Events</h3>
+        </div>
+        <div class="col-lg-9">
+          <div class="card mb-9 border-0">
+            <div class="row g-0 d-flex flex-column flex-lg-row">
+              <div class="col-md-4">
+                <img src="../assets/images/event-1.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
+                  <h5 class="card-title fs-3 text-primary">參與台北寵物論壇，爭取貓咪友善環境</h5>
+                  <p class="card-text text-dark">炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
+                  <div class="d-flex justify-content-between align-items-center mb-auto">
+                    <p class="card-text text-primary mb-0">12.26.2023</p>
+                    <btn type="button" class="btn btn-success">閱讀更多<i class="ph ph-arrow-right ps-3"></i></btn>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-9 border-0">
+            <div class="row g-0 d-flex flex-column flex-lg-row">
+              <div class="col-md-4">
+                <img src="../assets/images/event-1.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
+                  <h5 class="card-title fs-3 text-primary">參與台北寵物論壇，爭取貓咪友善環境</h5>
+                  <p class="card-text text-dark">炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
+                  <div class="d-flex justify-content-between align-items-center mb-auto">
+                    <p class="card-text text-primary mb-0">12.26.2023</p>
+                    <btn type="button" class="btn btn-success">閱讀更多<i class="ph ph-arrow-right ps-3"></i></btn>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-9 border-0">
+            <div class="row g-0 d-flex flex-column flex-lg-row">
+              <div class="col-md-4">
+                <img src="../assets/images/event-1.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
+                  <h5 class="card-title fs-3 text-primary">參與台北寵物論壇，爭取貓咪友善環境</h5>
+                  <p class="card-text text-dark">炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
+                  <div class="d-flex justify-content-between align-items-center mb-auto">
+                    <p class="card-text text-primary mb-0">12.26.2023</p>
+                    <btn type="button" class="btn btn-success">閱讀更多<i class="ph ph-arrow-right ps-3"></i></btn>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mb-9 mb-lg-13">
+      <h2 class="fs-8 text-primary fw-bold">政策議題</h2>
+      <h3 class="fs-5 text-primary mb-9">Policy Issues</h3>
+      <div class="card text-center">
+        <div class="card-header">
+          <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="true" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mb-9 mb-lg-13">
+      <div class="row">
+        <div class="col-lg-5">
+          <h2 class="fs-8 text-primary fw-bold">小額捐款</h2>
+          <h3 class="fs-5 text-primary mb-5 mb-lg-9">Small Donations</h3>
+          <h4 class="fs-3 fw-bold">您的每筆捐款，<br>是每隻毛孩未來的大大動力！</h4>
+        </div>
+        <div class="col-lg-7"></div>
+      </div>
+    </div>
+
+    <div class="container mb-9 mb-lg-13">
+      <div class="row">
+        <div class="col-lg-5">
+          <h2 class="fs-8 text-primary fw-bold">服務信箱</h2>
+          <h3 class="fs-5 text-primary mb-5 mb-lg-9">Service Mail</h3>
+          <h4 class="mb-5 fw-bold">您的聲音，我們的行動！</h4>
+          <p class="d-none d-lg-block">親愛的鄉親，每一位市民的意見都是我們社區前進的原動力。無論大小事，我都誠摯希望聽到您的建議。分享您的想法，一同為我們的未來打造更美好！</p>
+        </div>
+        <div class="col-lg-7">
+          <form class="bg-warning rounded-5 px-5 px-lg-9 py-9">
+            <div class="mb-3">
+              <label for="ContactName" class="form-label">姓名</label>
+              <input type="text" class="form-control" id="ContactName">
+            </div>
+            <div class="mb-3">
+              <label for="ContactEmail1" class="form-label">Email</label>
+              <input type="email" class="form-control" id="ContactEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+              <label for="ContactPhone" class="form-label">電話 / 手機</label>
+              <input type="tel" class="form-control" id="ContactPhone">
+            </div>
+            <div class="mb-3">
+              <label for="ContactComment" class="form-label">對我們的建議</label>
+              <textarea class="form-control" id="ContactComment"></textarea>
+            </div>
+            <button type="submit" class="btn btn-success w-100 mt-12 py-5">確認送出</button>
+          </form>
+        </div>
+      </div>
+    </div>
 
     <%- include('./layout/footer'); -%>
 
