--- a/contact.html
+++ b/contact.html
@@ -5,47 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-d8366074.js"></script>
-    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-9b91c2ff.css">
+    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-92321d14.js"></script>
+    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-67b86b85.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-  <div class="container">
+  <div class="container d-flex justify-content-between">
     <h1>
       <a href="index.html" class="logo"></a>
     </h1>
-    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
-      <ul class="list-unstyled d-flex flex-column flex-lg-row">
-        <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-facebook-logo fs-2 text-black"></i></a></li>
-        <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-instagram-logo fs-2 text-black"></i></a></li>
-        <li class="pe-lg-0 pb-5 pb-lg-0"><a href="#"><i class="ph ph-youtube-logo fs-2 text-black"></i></a></li>
-      </ul>
-    </div>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">小額捐款</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">候選主張</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">最新活動</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">政策議題</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">政策議題</a>
+      </li>
+    </ul>
+    <ul class="list-unstyled d-flex flex-column flex-lg-row">
+      <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-facebook-logo fs-2 text-black"></i></a></li>
+      <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-instagram-logo fs-2 text-black"></i></a></li>
+      <li class="pe-lg-0 pb-5 pb-lg-0"><a href="#"><i class="ph ph-youtube-logo fs-2 text-black"></i></a></li>
+    </ul>
   </div>
 </nav>    <h1>我是contact</h1>
     <footer class="footer bg-black py-9">
