--- a/pages/index.html
+++ b/pages/index.html
@@ -60,7 +60,7 @@
           <div class="card mb-9 border-0">
             <div class="row g-0 d-flex flex-column flex-lg-row">
               <div class="col-md-4">
-                <img src="../assets/images/event-1.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+                <img src="../assets/images/event-2.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
               </div>
               <div class="col-md-8">
                 <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
@@ -77,7 +77,7 @@
           <div class="card mb-9 border-0">
             <div class="row g-0 d-flex flex-column flex-lg-row">
               <div class="col-md-4">
-                <img src="../assets/images/event-1.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+                <img src="../assets/images/event-3.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
               </div>
               <div class="col-md-8">
                 <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
@@ -100,13 +100,13 @@
       <h3 class="fs-5 text-primary mb-9">Policy Issues</h3>
       <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active fs-5 py-5 border-0" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">寵物醫療保障方案</button>
+          <button class="nav-link active fs-5 py-5 border-0 text-wrap" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">寵物醫療保障方案</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link fs-5 py-5 border-0 bg-secondary text-black" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">寵物休閒與娛樂場所</button>
+          <button class="nav-link fs-5 py-5 border-0 bg-secondary text-black text-wrap" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">寵物休閒與娛樂場所</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link fs-5 py-5 border-0 bg-secondary text-black" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">推廣寵物飼養教育</button>
+          <button class="nav-link fs-5 py-5 border-0 bg-secondary text-black text-wrap" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">推廣寵物飼養教育</button>
         </li>
       </ul>
       <div class="tab-content" id="myTabContent">
