--- a/contact.html
+++ b/contact.html
@@ -5,39 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-92321d14.js"></script>
-    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-67b86b85.css">
+    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-7a23d882.js"></script>
+    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-f6998ddb.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-  <div class="container d-flex justify-content-between">
+    <nav class="navbar navbar-expand-lg bg-white sticky-top">
+  <div class="container d-flex justify-content-between align-items-center">
     <h1>
       <a href="index.html" class="logo"></a>
     </h1>
-    <ul class="navbar-nav">
+    <ul class="navbar-nav d-none d-lg-flex">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">小額捐款</a>
+        <a class="nav-link active px-5 py-3 bg-success rounded-3" aria-current="page" href="#"><i class="ph ph-hand-coins fs-4 pe-3 align-text-bottom"></i>小額捐款</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">候選主張</a>
+        <a class="nav-link px-5 py-3" href="#">候選主張</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">最新活動</a>
+        <a class="nav-link px-5 py-3" href="#">最新活動</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">政策議題</a>
+        <a class="nav-link px-5 py-3" href="#">政策議題</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">政策議題</a>
+        <a class="nav-link px-5 py-3" href="#">政策議題</a>
       </li>
     </ul>
-    <ul class="list-unstyled d-flex flex-column flex-lg-row">
-      <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-facebook-logo fs-2 text-black"></i></a></li>
-      <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-instagram-logo fs-2 text-black"></i></a></li>
-      <li class="pe-lg-0 pb-5 pb-lg-0"><a href="#"><i class="ph ph-youtube-logo fs-2 text-black"></i></a></li>
+    <ul class="list-unstyled d-none d-lg-flex mb-0">
+      <li class="pe-5 pb-0"><a href="#"><i class="ph ph-facebook-logo fs-2 text-black"></i></a></li>
+      <li class="pe-5 pb-0"><a href="#"><i class="ph ph-instagram-logo fs-2 text-black"></i></a></li>
+      <li class="pe-0 pb-0"><a href="#"><i class="ph ph-youtube-logo fs-2 text-black"></i></a></li>
     </ul>
+    <div class="d-lg-none">
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        <i class="ph ph-list fs-2"></i>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header mt-5">
+          <h2>
+            <a href="index.html" class="logo"></a>
+          </h2>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav d-flex d-lg-none">
+            <li class="nav-item mb-5">
+              <a class="nav-link active px-5 py-3 bg-success rounded-3 d-inline" aria-current="page" href="#"><i class="ph ph-hand-coins fs-4 pe-3 align-text-bottom"></i>小額捐款</a>
+            </li>
+            <li class="nav-item mb-5">
+              <a class="nav-link" href="#">候選主張</a>
+            </li>
+            <li class="nav-item mb-5">
+              <a class="nav-link" href="#">最新活動</a>
+            </li>
+            <li class="nav-item mb-5">
+              <a class="nav-link" href="#">政策議題</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">政策議題</a>
+            </li>
+          </ul>
+          <hr>
+          <ul class="list-unstyled d-flex flex-column d-lg-none mb-0">
+            <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#" class="text-black"><i class="ph ph-facebook-logo align-middle fs-2 text-black pe-1"></i>Facebook</a></li>
+            <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#" class="text-black"><i class="ph ph-instagram-logo align-middle fs-2 text-black pe-1"></i>Instagram</a></li>
+            <li class="pe-lg-0 pb-5 pb-lg-0"><a href="#" class="text-black"><i class="ph ph-youtube-logo align-middle fs-2 text-black pe-1"></i>YouTube</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-</nav>    <h1>我是contact</h1>
+</nav>
+    <h1>我是contact</h1>
     <footer class="footer bg-black py-9">
   <div class="container mb-7 mb-lg-9 d-flex flex-column flex-lg-row justify-content-between">
     <div>
