--- a/index.html
+++ b/index.html
@@ -4,42 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
+    <title>黑新星 - 喵喵權益我帶頭 | 2024 立委競選官方網站</title>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-92321d14.js"></script>
-    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-67b86b85.css">
+    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-7a23d882.js"></script>
+    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-f6998ddb.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-  <div class="container d-flex justify-content-between">
+    <nav class="navbar navbar-expand-lg bg-white sticky-top">
+  <div class="container d-flex justify-content-between align-items-center">
     <h1>
       <a href="index.html" class="logo"></a>
     </h1>
-    <ul class="navbar-nav">
+    <ul class="navbar-nav d-none d-lg-flex">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">小額捐款</a>
+        <a class="nav-link active px-5 py-3 bg-success rounded-3" aria-current="page" href="#"><i class="ph ph-hand-coins fs-4 pe-3 align-text-bottom"></i>小額捐款</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">候選主張</a>
+        <a class="nav-link px-5 py-3" href="#">候選主張</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">最新活動</a>
+        <a class="nav-link px-5 py-3" href="#">最新活動</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">政策議題</a>
+        <a class="nav-link px-5 py-3" href="#">政策議題</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">政策議題</a>
+        <a class="nav-link px-5 py-3" href="#">政策議題</a>
       </li>
     </ul>
-    <ul class="list-unstyled d-flex flex-column flex-lg-row">
-      <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-facebook-logo fs-2 text-black"></i></a></li>
-      <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-instagram-logo fs-2 text-black"></i></a></li>
-      <li class="pe-lg-0 pb-5 pb-lg-0"><a href="#"><i class="ph ph-youtube-logo fs-2 text-black"></i></a></li>
+    <ul class="list-unstyled d-none d-lg-flex mb-0">
+      <li class="pe-5 pb-0"><a href="#"><i class="ph ph-facebook-logo fs-2 text-black"></i></a></li>
+      <li class="pe-5 pb-0"><a href="#"><i class="ph ph-instagram-logo fs-2 text-black"></i></a></li>
+      <li class="pe-0 pb-0"><a href="#"><i class="ph ph-youtube-logo fs-2 text-black"></i></a></li>
     </ul>
+    <div class="d-lg-none">
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        <i class="ph ph-list fs-2"></i>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header mt-5">
+          <h2>
+            <a href="index.html" class="logo"></a>
+          </h2>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav d-flex d-lg-none">
+            <li class="nav-item mb-5">
+              <a class="nav-link active px-5 py-3 bg-success rounded-3 d-inline" aria-current="page" href="#"><i class="ph ph-hand-coins fs-4 pe-3 align-text-bottom"></i>小額捐款</a>
+            </li>
+            <li class="nav-item mb-5">
+              <a class="nav-link" href="#">候選主張</a>
+            </li>
+            <li class="nav-item mb-5">
+              <a class="nav-link" href="#">最新活動</a>
+            </li>
+            <li class="nav-item mb-5">
+              <a class="nav-link" href="#">政策議題</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">政策議題</a>
+            </li>
+          </ul>
+          <hr>
+          <ul class="list-unstyled d-flex flex-column d-lg-none mb-0">
+            <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#" class="text-black"><i class="ph ph-facebook-logo align-middle fs-2 text-black pe-1"></i>Facebook</a></li>
+            <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#" class="text-black"><i class="ph ph-instagram-logo align-middle fs-2 text-black pe-1"></i>Instagram</a></li>
+            <li class="pe-lg-0 pb-5 pb-lg-0"><a href="#" class="text-black"><i class="ph ph-youtube-logo align-middle fs-2 text-black pe-1"></i>YouTube</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </nav>
+
     <div class="container banner-bg position-relative mb-9 mb-lg-13">
       <div class="d-flex justify-content-center">
         <p class="text-white banner-text">喵喵權益<br>我帶頭</p>
@@ -72,13 +110,14 @@
           <div class="card mb-9 border-0">
             <div class="row g-0 d-flex flex-column flex-lg-row">
               <div class="col-md-4">
-                <img src="/web-layout-training-vite/assets/event-1-a8b9b30e.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+                <img src="/web-layout-training-vite/assets/event-1-a8b9b30e.png" class="rounded border border-info border-2 event-img" alt="...">
+                <div class="bg-info rounded bg-img"></div>
               </div>
               <div class="col-md-8">
                 <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
-                  <h5 class="card-title fs-3 text-primary">參與台北寵物論壇，爭取貓咪友善環境</h5>
-                  <p class="card-text text-dark">炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
-                  <div class="d-flex justify-content-between align-items-center mb-auto">
+                  <h5 class="card-title fs-3 text-primary pt-5 pt-lg-0">參與台北寵物論壇，爭取貓咪友善環境</h5>
+                  <p class="card-text text-dark ellipsis">炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
+                  <div class="d-flex justify-content-between align-items-center">
                     <p class="card-text text-primary mb-0">12.26.2023</p>
                     <btn type="button" class="btn btn-success rounded-pill">閱讀更多<i class="ph ph-arrow-right ps-3"></i></btn>
                   </div>
@@ -89,14 +128,15 @@
           <div class="card mb-9 border-0">
             <div class="row g-0 d-flex flex-column flex-lg-row">
               <div class="col-md-4">
-                <img src="/web-layout-training-vite/assets/event-1-a8b9b30e.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+                <img src="/web-layout-training-vite/assets/event-2-5d5bfb8a.png" class="rounded border border-info border-2 event-img" alt="...">
+                <div class="bg-info rounded bg-img"></div>
               </div>
               <div class="col-md-8">
                 <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
-                  <h5 class="card-title fs-3 text-primary">參與台北寵物論壇，爭取貓咪友善環境</h5>
-                  <p class="card-text text-dark">炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
-                  <div class="d-flex justify-content-between align-items-center mb-auto">
-                    <p class="card-text text-primary mb-0">12.26.2023</p>
+                  <h5 class="card-title fs-3 text-primary pt-5 pt-lg-0">掃街模式開啟！帶著你的貓耳，和我一起走！</h5>
+                  <p class="card-text text-dark ellipsis">街上氣氛真的很棒，從小孩到大人，甚至有些狗狗朋友都帶著貓耳來找我握手，真的太可愛了！這次的活動不僅讓我看到大家的熱情，更加堅定了我推進「貓咪友善環境」政策的決心。</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text text-primary mb-0">12.24.2023</p>
                     <btn type="button" class="btn btn-success rounded-pill">閱讀更多<i class="ph ph-arrow-right ps-3"></i></btn>
                   </div>
                 </div>
@@ -106,14 +146,15 @@
           <div class="card mb-9 border-0">
             <div class="row g-0 d-flex flex-column flex-lg-row">
               <div class="col-md-4">
-                <img src="/web-layout-training-vite/assets/event-1-a8b9b30e.png" class="img-fluid rounded border border-info border-2" alt="..." style="z-index: 2;">
+                <img src="/web-layout-training-vite/assets/event-3-407e1010.png" class="rounded border border-info border-2 event-img" alt="...">
+                <div class="bg-info rounded bg-img"></div>
               </div>
               <div class="col-md-8">
                 <div class="card-body px-0 px-lg-5 pt-5 pb-0 pt-lg-0">
-                  <h5 class="card-title fs-3 text-primary">參與台北寵物論壇，爭取貓咪友善環境</h5>
-                  <p class="card-text text-dark">炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
-                  <div class="d-flex justify-content-between align-items-center mb-auto">
-                    <p class="card-text text-primary mb-0">12.26.2023</p>
+                  <h5 class="card-title fs-3 text-primary pt-5 pt-lg-0">收容所模特兒大比拼！</h5>
+                  <p class="card-text text-dark ellipsis">今天的收容所不再是一片寂靜。為了讓更多人認識到這裡的毛孩子，我們舉辦了一場前所未有的「模特兒走秀」！</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text text-primary mb-0">12.20.2023</p>
                     <btn type="button" class="btn btn-success rounded-pill">閱讀更多<i class="ph ph-arrow-right ps-3"></i></btn>
                   </div>
                 </div>
@@ -127,20 +168,20 @@
     <div class="container mb-9 mb-lg-13">
       <h2 class="fs-8 text-primary fw-bold">政策議題</h2>
       <h3 class="fs-5 text-primary mb-9">Policy Issues</h3>
-      <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+      <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active fs-5 py-5 border-0" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">寵物醫療保障方案</button>
+          <button class="nav-link active fs-5 py-5 border-0 text-black text-wrap" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">寵物醫療保障方案</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link fs-5 py-5 border-0 bg-secondary text-black" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">寵物休閒與娛樂場所</button>
+          <button class="nav-link fs-5 py-5 border-0 text-black text-wrap" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">寵物休閒與娛樂場所</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link fs-5 py-5 border-0 bg-secondary text-black" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">推廣寵物飼養教育</button>
+          <button class="nav-link fs-5 py-5 border-0 text-black text-wrap" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">推廣寵物飼養教育</button>
         </li>
       </ul>
-      <div class="tab-content" id="myTabContent">
+      <div class="tab-content bg-warning" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-          <div class="px-5 py-9 px-lg-0 bg-warning">
+          <div class="px-5 py-9 px-lg-0">
             <h4 class="text-primary fs-3 text-center mb-12">為毛孩子謀福利！推動寵物醫療保障方案</h4>
             <div class="row row-cols-1 row-cols-lg-3">
               <div class="col text-center px-5 px-lg-9 pb-lg-8 mb-9 mb-lg-0 position-relative" style="z-index: 2;">
@@ -171,7 +212,7 @@
           </div>
         </div>
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-          <div class="px-5 py-9 px-lg-0 bg-warning">
+          <div class="px-5 py-9 px-lg-0">
             <h4 class="text-primary fs-3 text-center mb-12">打造休閒天堂！推廣寵物休閒與娛樂場所</h4>
             <div class="row row-cols-1 row-cols-lg-3">
               <div class="col text-center px-5 px-lg-9 pb-lg-8 mb-9 mb-lg-0 position-relative" style="z-index: 2;">
@@ -202,7 +243,7 @@
           </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-          <div class="px-5 py-9 px-lg-0 bg-warning">
+          <div class="px-5 py-9 px-lg-0">
             <h4 class="text-primary fs-3 text-center mb-12">推廣寵物飼養教育，讓愛更加專業</h4>
             <div class="row row-cols-1 row-cols-lg-3">
               <div class="col text-center px-5 px-lg-9 pb-lg-8 mb-9 mb-lg-0 position-relative" style="z-index: 2;">
@@ -249,31 +290,31 @@
           </div>
         </div>
         <div class="col-lg-7">
-          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2 mb-5">
+          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2 mb-5 donation-box">
             <div>
               <p class="fs-3">喵衛星｜<span class="fs-6 text-middle">NT$</span> 600</p>
-              <span class="bg-info px-5 py-3 rounded-1 mb-0">已有 2,000 人贊助</span>
+              <span class="bg-info px-5 py-3 rounded-1 mb-0 donation-num">已有 3,609 人贊助</span>
             </div>
             <i class="ph ph-moon-stars d-none d-lg-block text-light" style="font-size: 128px;"></i>
           </div>
-          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2 mb-5">
+          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2 mb-5 donation-box">
             <div>
               <p class="fs-3">喵行星｜<span class="fs-6 text-middle">NT$</span> 6,000</p>
-              <span class="bg-info px-5 py-3 rounded-1 mb-0">已有 2,000 人贊助</span>
+              <span class="bg-info px-5 py-3 rounded-1 mb-0 donation-num">已有 1,987 人贊助</span>
             </div>
             <i class="ph ph-planet d-none d-lg-block text-light" style="font-size: 128px;"></i>
           </div>
-          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2 mb-5">
+          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2 mb-5 donation-box">
             <div>
               <p class="fs-3">喵恆星｜<span class="fs-6 text-middle">NT$</span> 60,000</p>
-              <span class="bg-info px-5 py-3 rounded-1 mb-0">已有 2,000 人贊助</span>
+              <span class="bg-info px-5 py-3 rounded-1 mb-0 donation-num">已有 777 人贊助</span>
             </div>
             <i class="ph ph-sun d-none d-lg-block text-light" style="font-size: 128px;"></i>
           </div>
-          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2">
+          <div class="d-flex justify-content-between align-items-center border border-primary border-2 rounded px-5 px-lg-9 py-6 py-lg-2 donation-box">
             <div>
               <p class="fs-3">喵彗星｜自訂贊助金額</p>
-              <span class="bg-info px-5 py-3 rounded-1 mb-0">已有 2,000 人贊助</span>
+              <span class="bg-info px-5 py-3 rounded-1 mb-0 donation-num">已有 4,321 人贊助</span>
             </div>
             <i class="ph ph-shooting-star d-none d-lg-block text-light" style="font-size: 128px;"></i>
           </div>
